Add zinc init, record pattern matching, Makefile, fat jar packaging
CLI:
- zinc init <name>: scaffold project with build.mill.yaml + src/main.zn
- Makefile: build (fat jar), test, clean targets
- zinc launcher script for standalone execution

Record pattern matching:
- match on sealed class variants generates Java switch with record patterns
- Detects CallExpr patterns (Single(f)) vs value patterns ("ok")
- JavaParser configured with JAVA_25 language level for record patterns
- Data class variants need record generation (next step for zinc-flow)

234 tests, 14 e2e, all passing.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>